--- a/theme.conf
+++ b/theme.conf
@@ -1,18 +1,18 @@
-#theme by Munlik
+#theme by Munlik and htower
 
 #ICON
-icons_dir refind-theme-regular/icons/128-48
+icons_dir refind-theme-regular-black/icons/128-48
 
 #ICON SIZE
 big_icon_size 128
 small_icon_size 48
 
 #BACKGROUND IMAGE
-banner refind-theme-regular/icons/128-48/bg.png
+banner refind-theme-regular-black/icons/128-48/bg.png
 
 #SELECTION IMAGE
-selection_big refind-theme-regular/icons/128-48/selection-big.png
-selection_small refind-theme-regular/icons/128-48/selection-small.png
+selection_big refind-theme-regular-black/icons/128-48/selection-big.png
+selection_small refind-theme-regular-black/icons/128-48/selection-small.png
 
 #FONT
-font refind-theme-regular/fonts/source-code-pro-extralight-14.png
+font refind-theme-regular-black/fonts/source-code-pro-extralight-14.png
