Fix theme authors

--- a/src/theme.conf
+++ b/src/theme.conf
@@ -1,4 +1,4 @@
-#theme by Munlik and htower
+#theme by Munlik, bobafetthotmail and htower
 
 #ICON
 icons_dir refind-theme-regular-black/icons/128-48
